# projects-rust-server

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: domcloud.yml  rust.yml
online-shopping-solidjs/: index.html
online-shopping-solidjs/assets/: index-B43XHp0B.js  index-B50F-o1e.js  index-BuolXhIU.js  index-CNXYz58n.js  index-DGnGkhqV.css  index-Df3kPEdE.js
src/: db.rs  db_models.rs  main.rs
src/api/: mod.rs
src/db/: blog_item.rs  project_item.rs  shop_item.rs  tag.rs  tag_category_join.rs  user.rs
src/db/migrations/: 0001_init.sql  0002_blog_item.sql  0003_shop_image.sql  0004_shop_item_desc.sql  0005_project_item.sql
src/routes/: blog.rs  mod.rs  project.rs  shop.rs  static_files.rs  tag.rs  user.rs
