[package]
name = "projects-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
# Locked to 0.7 due to errors to trait implementation
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
serde = "1.0.204"
futures = "0.3"
either = "1.13"
strum = "0.26"
strum_macros = "0.26"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]
